--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -7,6 +7,7 @@
 @import '../style/basic/_helpers.scss';
 
 // Pages
-
+@import '../style/pages/_dashboard.scss';
 
 // Cmps
+@import '../style/cmps/_side-nav.scss';
