--- a/src/assets/style/basic/_helpers.scss
+++ b/src/assets/style/basic/_helpers.scss
@@ -2,6 +2,10 @@
     display: flex;
 }
 
+.column {
+    flex-direction: column;
+}
+
 .justify-space {
     justify-content: space-between;
 }
@@ -35,4 +39,8 @@
 .divider {
     width: 100%;
     height: 1px;
+}
+
+.pad-10px{
+    padding: 10px;
 }
