--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -8,6 +8,9 @@
 
 // Pages
 @import '../style/pages/_dashboard.scss';
+@import '../style/pages/_create-bot.scss';
 
 // Cmps
 @import '../style/cmps/_side-nav.scss';
+@import '../style/cmps/create-bot/_create-bot-radios.scss';
+@import '../style/cmps/create-bot/_create-bot-inputs.scss';
