--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -14,3 +14,4 @@
 @import '../style/cmps/_side-nav.scss';
 @import '../style/cmps/create-bot/_create-bot-radios.scss';
 @import '../style/cmps/create-bot/_create-bot-inputs.scss';
+@import '../style/cmps/create-bot/_create-bot-textarea.scss';
