--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -15,3 +15,4 @@
 @import '../style/cmps/create-bot/_create-bot-radios.scss';
 @import '../style/cmps/create-bot/_create-bot-inputs.scss';
 @import '../style/cmps/create-bot/_create-bot-textarea.scss';
+@import '../style/cmps/_app-header.scss';
